--- a/Kertel/Base.lproj/Main.storyboard
+++ b/Kertel/Base.lproj/Main.storyboard
@@ -284,7 +284,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AW7-UO-ASY" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="FRz-ln-YXF"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" barStyle="black" id="epr-zH-z9X">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="epr-zH-z9X">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -341,7 +341,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uc8-z0-Xo5">
                                 <rect key="frame" x="0.0" y="152" width="375" height="466"/>
                                 <connections>
-                                    <segue destination="3A2-L9-hbW" kind="embed" identifier="DirectoryPageEmbed" id="gJN-AP-sb6"/>
+                                    <segue destination="3A2-L9-hbW" kind="embed" identifier="directoryPageEmbed" id="gJN-AP-sb6"/>
                                 </connections>
                             </containerView>
                             <searchBar contentMode="redraw" placeholder="Rechercher" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tea-yk-lWd">
@@ -937,8 +937,8 @@
         <!--Directory Page View Controller-->
         <scene sceneID="Jb3-8l-Vb7">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tfz-j7-aOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="3A2-L9-hbW" customClass="DirectoryPageViewController" customModule="Kertel" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tfz-j7-aOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1505" y="1940"/>
         </scene>
@@ -992,13 +992,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Barack Obama" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNx-NS-Hb1">
-                                <rect key="frame" x="97.5" y="28" width="180" height="34"/>
+                                <rect key="frame" x="97.5" y="60" width="180" height="34"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Avv-1A-J1d">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="102" width="375" height="565"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" showsReorderControl="YES" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="titleDataCell" rowHeight="55" id="qqC-7x-zQd" customClass="TitleDataTableViewCell" customModule="Kertel" customModuleProvider="target">
@@ -1102,7 +1102,7 @@
                             <constraint firstItem="aNx-NS-Hb1" firstAttribute="centerX" secondItem="7DL-DM-bZI" secondAttribute="centerX" id="Ptt-dE-djN"/>
                             <constraint firstItem="CA3-Yi-t2e" firstAttribute="top" secondItem="Avv-1A-J1d" secondAttribute="bottom" id="T2g-DI-ciE"/>
                             <constraint firstItem="Avv-1A-J1d" firstAttribute="width" secondItem="7DL-DM-bZI" secondAttribute="width" id="Th9-Ze-pIe"/>
-                            <constraint firstItem="aNx-NS-Hb1" firstAttribute="top" secondItem="Td4-Td-qKx" secondAttribute="bottom" constant="8" symbolic="YES" id="dWn-lZ-Zox"/>
+                            <constraint firstItem="aNx-NS-Hb1" firstAttribute="top" secondItem="Td4-Td-qKx" secondAttribute="bottom" constant="40" id="dWn-lZ-Zox"/>
                             <constraint firstItem="Avv-1A-J1d" firstAttribute="leading" secondItem="7DL-DM-bZI" secondAttribute="leading" id="iwh-Gz-wjI"/>
                         </constraints>
                     </view>
